# rust-db-libs-samples

./: .gitignore  Cargo.toml
docker/: docker-compose.yml
docker/app/: Dockerfile
docker/db/: Dockerfile
domain/: Cargo.toml
domain/src/: model.rs
domain/src/model/: product.rs  product_category.rs
domain/src/repository/: product.rs
seaorm-adapter/: Cargo.toml
seaorm-adapter/src/: entities.rs  lib.rs  repository.rs
seaorm-adapter/src/entities/: product.rs  product_category.rs
seaorm-adapter/src/models/: product.rs
seaorm-adapter/src/persistence/: pool.rs
seaorm-adapter/src/repository/: product.rs
seaorm-migration/: Cargo.toml
seaorm-migration/src/: lib.rs  m20231018_000001_create_table.rs  main.rs
sqlx/: Cargo.toml  Makefile.toml
sqlx-adapter/: Cargo.toml
sqlx-adapter/migrations/: 20230902083226_product.down.sql  20230902083226_product.up.sql
sqlx-adapter/src/: lib.rs  persistence.rs  repository.rs
sqlx-adapter/src/model/: product.rs
sqlx-adapter/src/repository/: product.rs
sqlx/migrations/: 20230827153338_init.sql  20230902083226_product.up.sql
sqlx/src/model/: product.rs
sqlx/src/repository/: product.rs
test-lib/src/: lib.rs  model.rs
