[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
derive-new = "0.5.9"
fake = {version = "2.8.0", features = ['derive']}
mockall = "0.11.4"
ulid = "1.1.0"
tokio = { version = "1.32.0", features = ["full"] }
