[package]
name = "sqlx-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
chrono = "0.4.28"
derive-new = "0.5.9"
domain = { path = "../domain" }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "any", "chrono"]}
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
