[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "any", "chrono"]}
tokio = { version = "1.32.0", features = ["full"] }
